fixed problems with border-radius on safari

--- a/sass/page-contact-full.scss
+++ b/sass/page-contact-full.scss
@@ -11,6 +11,7 @@
 
     a.btn::after {
         background-color: #f5f5f5;
+        border-radius: 7px;
     }
 }
 
